# rust-technical-audit-toolkit

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: audit-pr.yml  ci.yml  release.yml
crates/audit-cli/: Cargo.toml
crates/audit-cli/src/: main.rs
crates/audit-core/: Cargo.toml
crates/audit-core/src/: collector.rs  json.rs  lib.rs  model.rs  pack.rs  report.rs  scoring.rs
crates/audit-core/src/analyzers/: architecture.rs  code_quality.rs  dependencies.rs  mod.rs  overview.rs  risks.rs  testing.rs
crates/audit-core/tests/: regression.rs
docs/: generated-sample-report.md  github-actions-pr-comment.md  sample-report.md
docs/audit-packs/: README.md
docs/audit-packs/axum/: README.md  evidence.json  executive-report.md  review-questions.md  risk-register.json  scorecard.json
docs/audit-packs/ratatui/: README.md  evidence.json  executive-report.md  methodology.md  review-questions.md  risk-register.json  scorecard.json
docs/audit-packs/tokio/: README.md  evidence.json  executive-report.md  review-questions.md  risk-register.json  scorecard.json
docs/sample-reports/: axum.md  ratatui.md  sled.md  tokio.md
examples/sample-rust-service/: Cargo.toml
examples/sample-rust-service/src/: api.rs  domain.rs  lib.rs  repository.rs  service.rs
examples/sample-rust-service/tests/: smoke.rs
