[package]
name = "rust-technical-audit-toolkit"
version = "0.2.1"
description = "CLI for Rust technical due diligence assessments"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
readme = "../../README.md"
keywords = ["rust", "audit", "cli", "due-diligence", "scorecard"]
categories = ["command-line-utilities", "development-tools"]
include = [
    "src/**/*",
    "Cargo.toml",
    "../../README.md",
    "../../LICENSE-MIT",
    "../../LICENSE-APACHE",
]

[[bin]]
name = "rta"
path = "src/main.rs"

[dependencies]
rta-core = { version = "0.2.1", path = "../audit-core" }

[lints]
workspace = true

[dev-dependencies]
serde_json = "1"
