[package]
name = "rta-core"
version = "0.2.1"
description = "Core analyzers and report model for the Rust Technical Audit Toolkit"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
readme = "../../README.md"
keywords = ["rust", "audit", "due-diligence", "scorecard"]
categories = ["development-tools"]
include = [
    "src/**/*",
    "Cargo.toml",
    "../../README.md",
    "../../LICENSE-MIT",
    "../../LICENSE-APACHE",
]

[lib]
name = "rta_core"
path = "src/lib.rs"

[lints]
workspace = true

[dev-dependencies]
serde_json = "1"
